--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,11 @@
-@import "./base/base";
 @import "./abstract/variables";
+@import "./base/base";
 @import "./abstract/mixins";
 
 @import "./components/navigation";
 @import "./components/main";
 @import "./components/landing";
+@import "./components/home";
 @import "./components/form";
 @import "./components/day";
 @import "./components/footer";
