--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,15 +6,15 @@
 
 html {
   font-size: 62.5%;
-  background-color: #111;
-  background-image: linear-gradient(
-      rgba(12, 21, 12, 1),
-      rgba(12, 23, 12, 1)
-    );
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: $black;
+  // background-image: linear-gradient(
+  //     rgba(12, 21, 12, 1),
+  //     rgba(12, 23, 12, 1)
+  //   );
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-attachment: fixed;
   scroll-behavior: smooth;
 }
 
@@ -26,12 +26,12 @@ body {
 
 ::-moz-selection {
   background-color: #444;
-  color: lawngreen;
+  color: $green;
 }
 
 ::selection {
   background-color: #444;
-  color: lawngreen;
+  color: $green;
 }
 
 body::-webkit-scrollbar-track {
@@ -50,5 +50,5 @@ body::-webkit-scrollbar-thumb {
   border-radius: 2px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: lawngreen;
+  background-color: $green;
 }
