--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/main";
 @import "./components/landing";
 @import "./components/home";
+@import "./components/messages";
 @import "./components/form";
 @import "./components/day";
 @import "./components/footer";
