--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/home";
 @import "./components/messages";
 @import "./components/form";
+@import "./components/profile";
 @import "./components/day";
 @import "./components/footer";
 
