--- a/src/index.css
+++ b/src/index.css
@@ -277,16 +277,18 @@ nav ul {
   justify-content: space-evenly;
   font-size: 2.6rem;
   color: #eee;
-  margin-top: 10%; }
+  margin-top: 10%;
+  margin-left: 10%; }
   .home-nav {
-    position: sticky; }
+    position: fixed;
+    left: 10px; }
     .home-nav_sticky {
       display: inline-flex;
       flex-direction: column;
       align-items: flex-end;
       position: sticky;
       top: 200px;
-      margin: 10rem 0 0 10rem; }
+      margin: 10rem 0 0 15rem; }
       .home-nav_sticky-selected {
         color: #7cfc00; }
       .home-nav_sticky > * {
@@ -301,21 +303,27 @@ nav ul {
     .home-feed-posts {
       display: flex;
       flex-direction: column; }
-      .home-feed-posts > *:not(:first-child) {
-        margin: 3rem auto 0; }
       .home-feed-posts-card {
         display: flex;
         background-color: rgba(200, 200, 200, 0.5);
         border-radius: 3px;
         padding: 1rem 2rem;
-        min-width: 900px; }
+        min-width: 900px;
+        margin: 0rem auto 3rem; }
         .home-feed-posts-card-avatar {
-          padding-right: 3rem; }
+          margin-right: 3rem;
+          border-radius: 50%;
+          border: none;
+          height: 70px;
+          min-width: 70px;
+          max-width: 70px;
+          background-color: #ccc;
+          overflow: hidden;
+          display: block; }
           .home-feed-posts-card-avatar-img {
-            border-radius: 100px;
-            height: 70px;
-            width: auto;
-            object-fit: contain; }
+            object-fit: cover;
+            height: 100%;
+            width: 100%; }
         .home-feed-posts-card-content {
           display: flex;
           flex-direction: column;
@@ -376,95 +384,92 @@ nav ul {
                   background-color: #7cfc00;
                   color: #14110F;
                   cursor: pointer; }
-  .home-other {
-    width: 20%;
-    margin-right: 5rem; }
-    .home-other-search {
-      display: flex;
-      align-items: center;
-      background-color: #fff;
-      border-radius: 10px;
-      width: 38.5rem;
-      padding: 0.5rem 0;
-      margin-bottom: 2rem; }
-      .home-other-search_icon {
-        height: 30px;
-        width: auto;
-        color: #333;
-        padding: 0 1rem; }
-      .home-other-search_input {
-        overflow: hidden;
-        border: none;
-        background-color: transparent;
-        padding: 0.5rem 0.75rem;
-        font-size: 2rem;
-        width: 80%;
-        transition: all 0.3s ease-out; }
-        .home-other-search_input:hover {
-          background-color: #efefef; }
-        .home-other-search_input:focus {
-          outline: none;
-          background-color: #efefef; }
-    .home-other-workouts {
-      padding: 1rem 0;
-      font-size: 2.4rem; }
-      .home-other-workouts_title {
-        margin-bottom: 1.5rem;
-        font-size: 2.6rem; }
-      .home-other-workouts-card {
-        padding: 1rem 1.5rem;
-        display: flex;
-        flex-direction: column;
-        background-color: rgba(200, 200, 200, 0.5);
-        color: #ddd;
-        margin-bottom: 3rem;
-        border-radius: 3px; }
-        .home-other-workouts-card > *:not(:last-child) {
-          margin-bottom: 0.5rem; }
-        .home-other-workouts-card_type {
-          display: inline-flex; }
-        .home-other-workouts-card_author {
-          display: inline-flex;
-          padding-left: 0.75rem; }
-        .home-other-workouts-card_title {
-          color: #eee; }
-    .home-other-people_title {
+  .home-other-search {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 10px;
+    width: 38.5rem;
+    padding: 0.5rem 0;
+    margin-bottom: 2rem; }
+    .home-other-search_icon {
+      height: 30px;
+      width: auto;
+      color: #333;
+      padding: 0 1rem; }
+    .home-other-search_input {
+      overflow: hidden;
+      border: none;
+      background-color: transparent;
+      padding: 0.5rem 0.75rem;
+      font-size: 2rem;
+      width: 80%;
+      transition: all 0.3s ease-out; }
+      .home-other-search_input:hover {
+        background-color: #efefef; }
+      .home-other-search_input:focus {
+        outline: none;
+        background-color: #efefef; }
+  .home-other-workouts {
+    padding: 1rem 0;
+    font-size: 2.4rem; }
+    .home-other-workouts_title {
       margin-bottom: 1.5rem;
       font-size: 2.6rem; }
-    .home-other-people-card {
+    .home-other-workouts-card {
       padding: 1rem 1.5rem;
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+      flex-direction: column;
       background-color: rgba(200, 200, 200, 0.5);
       color: #ddd;
       margin-bottom: 3rem;
       border-radius: 3px; }
-      .home-other-people-card-middle {
-        margin-left: -6rem;
-        margin-bottom: 1rem; }
-        .home-other-people-card-middle_username {
-          font-size: 2rem; }
-      .home-other-people-card-button > * {
-        border: none;
-        padding: 0.5rem 0.75rem;
-        font-size: 2rem;
-        border-radius: 2px; }
-      .home-other-people-card-button_follow {
-        transition: all 0.3s ease-out; }
-        .home-other-people-card-button_follow:hover {
-          background-color: #1976e0;
-          color: #eee;
-          cursor: pointer; }
-      .home-other-people-card-button_following {
+      .home-other-workouts-card > *:not(:last-child) {
+        margin-bottom: 0.5rem; }
+      .home-other-workouts-card_type {
+        display: inline-flex; }
+      .home-other-workouts-card_author {
+        display: inline-flex;
+        padding-left: 0.75rem; }
+      .home-other-workouts-card_title {
+        color: #eee; }
+  .home-other-people_title {
+    margin-bottom: 1.5rem;
+    font-size: 2.6rem; }
+  .home-other-people-card {
+    padding: 1rem 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(200, 200, 200, 0.5);
+    color: #ddd;
+    margin-bottom: 3rem;
+    border-radius: 3px; }
+    .home-other-people-card-middle {
+      margin-left: -6rem;
+      margin-bottom: 1rem; }
+      .home-other-people-card-middle_username {
+        font-size: 2rem; }
+    .home-other-people-card-button > * {
+      border: none;
+      padding: 0.5rem 0.75rem;
+      font-size: 2rem;
+      border-radius: 2px; }
+    .home-other-people-card-button_follow {
+      transition: all 0.3s ease-out; }
+      .home-other-people-card-button_follow:hover {
         background-color: #1976e0;
         color: #eee;
-        transition: all 0.3s ease-out; }
-        .home-other-people-card-button_following:hover {
-          background-color: #7cfc00;
-          color: #eee;
-          cursor: pointer; }
+        cursor: pointer; }
+    .home-other-people-card-button_following {
+      background-color: #1976e0;
+      color: #eee;
+      transition: all 0.3s ease-out; }
+      .home-other-people-card-button_following:hover {
+        background-color: #7cfc00;
+        color: #eee;
+        cursor: pointer; }
 
 .messages-people {
   width: 25%;
@@ -483,7 +488,7 @@ nav ul {
   position: absolute;
   right: 5rem;
   margin-top: 10rem; }
-  .form-input {
+  .form-input, .profile-info_edit {
     border: none;
     font-size: 3rem;
     padding: 1rem 1.5rem;
@@ -570,6 +575,84 @@ nav ul {
   100% {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg); } }
+
+.profile {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem; }
+  .profile-top {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 5rem; }
+    .profile-top-left {
+      display: flex;
+      align-items: center; }
+      .profile-top-left-avatar {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        overflow: hidden; }
+        .profile-top-left-avatar_image {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
+          z-index: -20; }
+        .profile-top-left-avatar_change {
+          background-color: rgba(34, 34, 34, 0.8);
+          color: #fff;
+          font-weight: 700;
+          font-size: 1.2rem;
+          text-transform: uppercase;
+          padding: 2rem auto;
+          transform: translateY(-6rem);
+          transition: all 0.2s ease-in-out;
+          z-index: 100; }
+          .profile-top-left-avatar_change-form {
+            padding: 1rem 2.5rem 3rem; }
+            .profile-top-left-avatar_change-form--input {
+              display: none; }
+              .profile-top-left-avatar_change-form--input:hover {
+                cursor: pointer; }
+            .profile-top-left-avatar_change-form--label:hover {
+              cursor: pointer; }
+      .profile-top-left-username {
+        padding: 0 3rem; }
+    .profile-top-right-edit {
+      border: none;
+      font-size: 2rem;
+      color: #111;
+      padding: 0.5rem 0.75rem;
+      transition: all 0.3s ease-out; }
+      .profile-top-right-edit:hover {
+        background-color: #7cfc00;
+        cursor: pointer; }
+  .profile-info {
+    display: flex;
+    flex-direction: column; }
+    .profile-info_edit {
+      background-color: #333;
+      color: #eee;
+      font-size: 2rem !important;
+      width: 70%; }
+    .profile-info-bio {
+      padding-bottom: 5rem; }
+    .profile-info-other {
+      display: flex;
+      font-size: 2rem; }
+      .profile-info-other_edit {
+        display: flex;
+        font-size: 2rem;
+        flex-direction: column; }
+      .profile-info-other-website {
+        padding-left: 3rem; }
+        .profile-info-other-website-link {
+          color: dodgerblue; }
+      .profile-info-other-joined {
+        padding-left: 3rem; }
+  .profile-content {
+    margin-top: 10rem; }
 
 .grid {
   display: grid;
